[package]
name = "c8-backup"
version = "0.3.0"
edition = "2021"
authors = ["Ole Schönburg <ole.schoenburg@gmail.com>"]
description = "Backup and restore Camunda Platform 8 deployments"
license = "MIT"
homepage = "https://github.com/oleschoenburg/c8-backup"
repository = "https://github.com/oleschoenburg/c8-backup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.82", default-features = false, features = ["client", "runtime", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.22", features = ["v1_26"] }
serde_json = "1"
tracing = "0.1"
tracing-tree = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "0.14"
clap = { version = "4.5.3", features = ["derive"] }
chrono = "0.4.35"
chrono-humanize = "0.2.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = []
# Publish jobs to run in CI
pr-run-mode = "plan"
